# neural-k-forms

./: .gitignore  AIDS-graph-classification copy.ipynb  AIDS-graph-classification.ipynb  AS_cochains.ipynb  AS_cochains_debug.ipynb  DR-nn-vectorfield-example-R2 FAST.ipynb  DR-nn-vectorfield-example-R2 optim.ipynb  DR-nn-vectorfield-example-R2.ipynb  DRnn-R2example.ipynb  Integrate-k_forms.ipynb  LICENSE.md  README.md  Surface_classification_multiple_cochains.ipynb  Surface_classification_single_cochain.ipynb  Surface_multiple_cochain_plots.ipynb  basic_model.pt  cochainlearning.py  k_forms.py  k_forms_visual.py  neural_kforms.py  path-classification.ipynb  path_data_sets.ipynb  protein-classification.ipynb  pyproject.toml  simple_surfaces.ipynb  synthetic-path-classification.ipynb  synthetic-surface-classification.ipynb  visualising-eigenvectors copy.ipynb  visualising-eigenvectors.ipynb
2-forms/: Surface_classification.ipynb  Surface_classification_multiple_cochains.ipynb  Surface_classification_multiple_cochains_MLP.ipynb  Surface_classification_sine_functions.ipynb  k_forms.py  k_forms_visual.py
cochain_representation_learning/: __init__.py  chains.py  collect_results.py  graph_datasets.py  graphs.py  plotting.py  simplicial.py
neural_k_forms/: __init__.py  baselines.py  chains.py  collect_results.py  forms.py  geometry.py  graph_datasets.py  graphs.py  plotting.py  simplicial.py
notebooks/: synthetic-surface-classification.ipynb  visualising-eigenvectors.ipynb
scripts/: es_lrz.sh  submit_all.sh  submit_model_net.sh  submit_molecule_net.sh  submit_tu_final.sh
tudata/TUDataset/BZR/processed/: data.pt
tudata/TUDataset/PROTEINS/processed/: data.pt
