[tool.poetry]
name = "cochain_representation_learning"
description = "Representation learning using cochains"
version = "0.1.0"
authors = [
  "Kelly Maggs <kelly.maggs@epf.ch>",
  "Celia Hacker <celia.hacker@mis.mpg.de>",
  "Bastian Rieck <bastian.rieck@helmholtz-munich.de>"
]

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
black = "^23.3.0"
gudhi = "^3.8.0"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
torch = "^2.0.1"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"

[tool.black]
line-length = 79
