[tool.poetry]
name = "neural_k_forms"
description = "Simplicial Representation Learning with Neural $k$-forms"
version = "0.1.0"
authors = [
  "Kelly Maggs <kelly.maggs@epf.ch>",
  "Celia Hacker <celia.hacker@mis.mpg.de>",
  "Bastian Rieck <bastian.rieck@helmholtz-munich.de>"
]

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
black = "^23.3.0"
gudhi = "^3.8.0"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
wandb = "^0.15.3"
pandas = "^2.0.3"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.4"
poethepoet = "^0.25.0"

[tool.black]
line-length = 79

[tool.poe.tasks]
torch-cuda-118 = "python -m pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118"
torch-cuda-121 = "python -m pip install torch torchvision torchaudio"
torch-cpu      = "python -m pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu"
